@@ -247,6 +247,30 @@ If it's true, controller will auto-detect its groupmembers with multicast.
    			</hint>
 		</config>
 	</category>
+
+        <category name="Domintell">
+                <description>
+                        <![CDATA[
+                                Configuration for the Domintell DETH02 interface used by  the Domintell protocol.
+                        ]]>
+                </description>
+                <config name="domintell.address" value="192.168.1.1"
+                        validation="(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)">
+                        <hint>
+                                <![CDATA[
+                                         Address of the DETH02 interface used to connect to the Domintell system, mandatory.
+                                ]]>
+                        </hint>
+                </config>
+                <config name="domintell.port" value="17481"
+                        validation="\d+">
+                        <hint>
+                                <![CDATA[
+                                        UDP port of the DETH02 interface used to connect to the Domintell system, mandatory.
+                                ]]>
+                        </hint>
+                </config>
+        </category>
 	
   <category name="amx_ni">
     <description>
